config/kuadrant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mctc-demo
spec:
  hostnames:
  - "test.example.com"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: istio
    namespace: istio-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mctc-demo
      port: 80
      weight: 1
    matches:
    - method: GET
      path:
        type: PathPrefix
        value: /demo
